navbar text not overlapping fix

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,16 +4,21 @@
   position: fixed;
   top: 20px;
   right: 0%;
-  width: 35%;
+  width: 100%;
   z-index: 1;
+  text-align: right;
+  background-color: rgb(41, 41, 41);
   /* display: flex; */
   /* border: solid; */
+  -webkit-box-shadow: 0px -10px 29px 50px rgb(41, 41, 41);
+  -moz-box-shadow: 0px -10px 29px 50px rgb(41, 41, 41);
+  box-shadow: 0px -10px 29px 50px rgb(41, 41, 41);
 }
 .navbar a {
   font-family: "PT Sans", sans-serif;
   color: white;
   text-decoration: none;
-  margin: 5%;
+  margin: 2%;
 }
 
 @media only screen and (max-width: 800px) {
